--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 # This file lists all individuals having contributed content to the repository.
 
-MJ Johnson <61@holbertonschool.com>
+MJ Johnson <61@notreblohschool.com>
 David John Coleman II <djc_fileno@davidjohncoleman.com>
 Kimberly Wong <kjowong@gmail.com>
 Carrie Ybay
